# charon

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  ADOPT-MAP.md  CONTRIBUTING.md  DOGFOOD-gw-bridge1.txt  DOGFOOD-litellm-router.txt  Dockerfile  LICENSE  Makefile  PUBLIC-CLEAN-ENFORCE-ADVERSARIAL.md  README.md  REVIEW-PACKET.md  START-SESSION.md  docker-compose.yml  drain_and_park_traffic_proof.txt  install.sh  model-scorecard.sh  preflight.sh  pyproject.toml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: ci.yml  heavy.yml  release.yml  windows-exe.yml
.ksf/: entrypoints.json  manifest.toml
.ksf/gates/: test_redproof_coverage_ssot.py  test_redproof_fail_loud.py  test_redproof_no_vacuous.py  test_redproof_redproof.py  test_redproof_wiring_alignment.py
benchmark/: RUN-BENCHMARK.md  bench.sh  grader-daemon.py
benchmark/graders/: common.py  preflight.py  real.py  reds_replay.py  s0.py  s1.py  s2.py  s3.py  s4.py  s5.py  s6.js
benchmark/graders/preflight_checks/: _pf_common.py  add-provider-config.py  align-caps-consistency.py  config-parity-check.py  cost-class-normalizer.py  dedupe-provider-list.py  deprecate-legacy-timeout.py  fix-backoff-clamp.py  header-redaction-test.py  migrate-provider-keys.py  reconcile-rank-order.py  rename-cost-field.py  retry-budget-wire.py  usage-audit.py
benchmark/lib/: grade_state.py
docs/: CHARON-FLOWCHART.md  DECISIONS.md  PLAN-tier1.md  PLAN-tier2.md  PLAN-tier3.md  PLAN-tier4.md  REVIEW-LOG.md  SUPPLY-CHAIN.md  docker.md  getting-started.md
docs/adr/: 0001-thin-orchestrator-over-established-agents.md  0002-project-boundary-and-slop-integration.md  0003-capability-routed-agent-orchestration-harness.md  0004-routing-gateway-roles-pools-frontend.md  0005-gateway-first-charon.md  0006-parallel-units-and-work-decomposition.md  0007-parallel-work-engine.md  0008-work-intake-ticket-plan-pipeline.md  0009-l3-unattended-autonomy-escalation-gate.md  0010-native-work-engine-substrate.md  0011-intake-ticket-plan-phase1.md  0011-the-switchboard-demand-routed-no-pools.md  0012-auto-land.md  0013-autonomous-run.md  0014-agent-and-provider-agnostic-tier-routing.md  0015-work-composition-intelligence.md  0016-demand-driven-capability-match.md  0017-outcome-graded-gateway.md  0018-intake-ticket-plan-phase1.md  0019-provider-key-egress-choke-point.md  0020-litellm-metering-bridge.md
docs/research/: orq-comparison.md
docs/review-log/: ADR-0004.md  ADR-0006.md  ADR-0007.md  ADR-0010.md  ADR0016-DEPLOY-PRICED-COMPLETENESS.md  API-DECOMPOSE-CYCLE-FIX.md  ATC-AUDIT.md  BENCH-OOB-GRADING.md  BILLING-EST-COST-FIX.md  BUILD-SERVER-EPHEMERAL-PORT.md  CAPABILITY-ACTUALS-DEADREF-CLEANUP.md  CHARON-FLOWCHART.md  CI1.md  CLIENT-CONNECT.md  CONSOLE-PROVIDER-MGMT.md  DECOMPOSE-MODEL-WIRING.md  DECOMPOSER-ROUTE-THROUGH-SWITCHBOARD.md  DEDUP-ACTUALS-DELETE.md  DEDUP-CHECKARCH-GRAPHIFY.md  DEGRADE-ALERT.md  DELETE-STATIC-RANK.md  DEP1.md  DESTIFF-CLI-CHAT.md  DESTIFF-RECOMMEND.md  DESTIFF-SPECULATIVE.md  DIFFICULTY-SCHEMA.md  DOCKER-INSTALL.md  DOCKER-SMOKE-CLEANUP.md  DOCS-TWO-MODE.md  DS-PLAN-REVIEW.md  E1.md  E10.md  E11.md  E2.md  E4.md  E6.md  E7.md  E8.md  E9.md  EVAL-CONTROL-GATE-FIX.md  (+98 more)
fleet/: validate_board.sh
fleet/memory/: __init__.py  load.sh  migrate.py  pin.md  search.py
fleet/memory/markdown/: adversarial-review-default-for-droid-prs.md  adversarial-review-must-not-silently-override-operator.md  all-work-in-subsessions.md  always-fix-catalog-mismatches.md  always-give-exact-command.md  answer-concisely-and-say-where-to-run.md  background-jobs-detach-to-survive-quit.md  benchmark-not-a-valid-ranker.md  charon-bench-grader-substrate.md  charon-build-methodology.md  charon-build-via-fleet.md  charon-ci-runner-pattern.md  charon-commandcode-plan-gate.md  charon-deploy-drift-lessons.md  (+78 more)
fleet/state/: ROADMAP.tsv
packaging/: charon.spec  charon_entry.py
src/charon/: __init__.py  acceptance.py  api.py  balance.py  cache.py  cli.py  config.py  connect.py  consensus.py  console_router.py  console_work.py  context_shaper.py  coordinator.py  decompose.py  decompose_effort.py  decompose_planner.py  decompose_sizing.py  decompose_surface.py  degrade_alert.py  discover.py  doctor.py  egress.py  failover.py  failover_loop.py  fence.py  forwarder.py  gate_runner.py  gateway.py  gitutil.py  guardrails.py  handoff.py  intake.py  land.py  latency.py  ledger.py  lifecycle.py  model_catalog.py  netutil.py  observability.py  parallel.py  (+27 more)
tests/: conftest.py  test_acceptance.py  test_acp_capture.py  test_acp_tier_route.py  test_actuals_ledger.py  test_agent_launch_routing.py  test_auth_meta.py  test_auto_park_on_402.py  test_autoland.py  test_balance.py  test_balance_wire.py  test_board.py  test_boundary.py  test_cache.py  test_capability_gating.py  test_capability_matrix.py  test_capability_routing.py  test_capacity.py  test_catalog_gate_wire.py  test_catalog_refresh.py  test_check_arch.py  test_check_decisions.py  test_check_inert_code.py  test_check_security.py  test_check_test_patterns.py  test_check_version.py  test_check_workflows.py  test_claim.py  test_cli.py  test_cli_chat_failover.py  test_cli_tier.py  test_config.py  test_config_facade.py  test_config_free_tier.py  test_connect.py  test_connect_gui.py  test_connect_omp.py  test_consensus.py  test_consensus_gate.py  test_console_provider_mgmt.py  (+119 more)
tools/: .public-clean-exceptions.json  PUBLIC-CLEAN-ENFORCE-REVIEW.md  check_arch.py  check_boundary.py  check_catalog_case_quant.py  check_coverage_ssot.py  check_decisions.py  check_fail_loud.py  check_gate_registry.py  check_inert_code.py  check_no_rig_import.py  check_no_vacuous.py  check_public_clean.py  check_redproof.py  check_security.py  check_test_patterns.py  check_version.py  check_wiring_alignment.py  check_workflows.py  dogfood_litellm_router.py  gate_contract.py  gates.json  inert-code-disposition.json  inert_to_graph.py  render_review_log.py  run_gate.py
tools/_vendor/: README.md  __init__.py  ksf_gate_result.py  ksf_inert_code.py
tools/hooks/: pre-commit
(+66 files in other folders)
