[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charon"
version = "0.6.0"
description = "A thin orchestrator that ferries one unit of work across swappable coding-agent backends, keeping a vendor-neutral Work Ledger as the single source of truth."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nnyan", email = "Nnyan@users.noreply.github.com" }]
keywords = ["agents", "orchestration", "acp", "llm", "autonomous"]

# The core currently declares no runtime dependencies — this is a CURRENT FACT,
# not a mandate. Per the operator ADOPT-FIRST directive (2026-07-21) a maintained
# runtime dependency is ALLOWED and no ADR is required to add one; adopting a
# suitable existing library is the default, preferred path and hand-rolling is the
# last-resort choice. The HTTP service remains an OPTIONAL extra so its stack only
# lands when the service surface is installed.
dependencies = []

[project.optional-dependencies]
service = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2"]
# ADR-0017 adopt: litellm.Router as a LIBRARY for the gateway commodity plane
# (failover / cooldown / allowed_fails / cost / mechanical ordering). Kept an OPTIONAL
# extra while it is OPT-IN and not yet the live money-path; promote to core `dependencies`
# when the live wire-in lands (accepting the ~218MB + native deps ADR-0017 calls out).
# httpx ships with litellm and backs `no_redirect_client()`.
router = ["litellm>=1.93"]
dev = ["pytest>=8", "pytest-xdist>=3.8", "ruff>=0.4", "mypy>=1.9", "pip-audit>=2.7", "httpx>=0.27"]
# BUILD-time only — never installed into the privileged gateway path (ADR-0005 D5)
packaging = ["pyinstaller>=6.0"]

[project.scripts]
charon = "charon.cli:main"

[project.urls]
Homepage = "https://github.com/SLOP-Platform/charon"
Repository = "https://github.com/SLOP-Platform/charon"

[tool.hatch.build.targets.wheel]
packages = ["src/charon"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "tools"]
# Vendored third-party code (KSF inert-code gate) — not linted to our standards.
extend-exclude = ["tools/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src/charon", "tools", "tests"]
ignore_missing_imports = true
explicit_package_bases = true

# Suppress pre-existing errors in test files that are not in FB5's owns: list.
# Each override is scoped to specific error codes — not a broad ignore.
[[tool.mypy.overrides]]
module = ["tests.test_proxy_server"]
disable_error_code = ["str-bytes-safe"]

[[tool.mypy.overrides]]
module = ["tests.test_gateway_failover"]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["tests.test_scanners"]
disable_error_code = ["func-returns-value", "arg-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
# Repo root on sys.path so `tools.*` imports resolve under the bare `pytest`
# console script in CI (not just `python -m pytest`, which adds CWD itself).
# `src` is listed so tests import THIS checkout's package, not a `charon`
# editable-installed elsewhere — without it, pytest run inside a git worktree
# resolves `import charon` back to the main clone's src (false red/green).
pythonpath = [".", "src"]
